--- a/templates/parts/sheet-attributes.html
+++ b/templates/parts/sheet-attributes.html
@@ -10,3 +10,34 @@
     <input type="checkbox" name="data.life.eight" {{checked actor.data.life.eight}}>
     <input type="checkbox" name="data.life.nine" {{checked actor.data.life.nine}}>
 </div>
+<h2>Caractéristiques</h2>
+<div class="ability">
+    <ol>
+        {{#each actor.data.abilities as |ability key|}}
+            {{#if ability.isPhysique }}
+               <li>
+                    <label>{{localize ability.label }}</label>
+                     <input name="data.abilities.{{key}}.value" type="number" value="{{ability.value}}" placeholder="{{localize ability.label }}" />
+                </li>
+            {{/if}}
+        {{/each}}
+    </ol>
+</div>
+
+<div class="ability">
+    <ol>
+        {{#each actor.data.abilities as |ability key|}}
+            {{#if ability.isMental }}
+                <li>
+                    <label>{{localize ability.label }}</label>
+                     <input name="data.abilities.{{key}}.value" type="number" value="{{ability.value}}" placeholder="{{localize ability.label }}" />
+                </li>
+            {{/if}}
+        {{/each}}
+        </ol>
+</div>
+
+<div class="chance">
+    <label>{{localize actor.data.abilities.chance.label }}</label>
+    <input name="data.abilities.chance.value" type="number" value="{{ actor.data.abilities.chance.value }}" placeholder="{{localize actor.data.abilities.chance.label }}" />
+</div>
