--- a/templates/actor-sheet.html
+++ b/templates/actor-sheet.html
@@ -17,10 +17,10 @@
                 <input name="data.age" type="number" value="{{actor.data.age}}" placeholder="Age" />
             </h1>
         </div>
-        <div class=".sheet-header-item">
-            <div class="resource">
-                <label>Race: </label>
-                <select  class="selectrace"  name="data.race" data-type="String">
+        <div class=".sheet-header-item container">
+            <div class="row">
+                <label class="col-25">Race: </label>
+                <select  class="selectrace col-75"  name="data.race" data-type="String">
                     {{#select actor.data.race}}
                         <option value="">---</option>
                         {{#each config.races as |race key|}}
@@ -29,26 +29,41 @@
                     {{/select}}
                 </select>
             </div>
-            <div class="resource">
-                <label>Lignée: </label>
-                <input name="data.lineage" type="text" value="{{actor.data.lineage}}" placeholder="Lignée" />
+            <div class="row">
+                <label class="col-25">Lignée: </label>
+                <input clas="col-75" name="data.lineage" type="text" value="{{actor.data.lineage}}" placeholder="Lignée" />
             </div>
-            <div class="resource">
-                <label>Réputation: </label>
-                <input name="data.reputation" type="number" value="{{actor.data.reputation}}" placeholder="Réputation" />
+            <div class="row">
+                <label class="col-25">Réputation: </label>
+                <input clas="col-75" name="data.reputation" type="number" value="{{actor.data.reputation}}" placeholder="Réputation" />
             </div>
-            <div class="resource">
-                <label>Faction: </label>
-                <input name="data.faction" type="text" value="{{actor.data.faction}}" placeholder="Faction" />
+            <div class="row">
+                <label class="col-25">Faction: </label>
+                <input clas="col-75" name="data.faction" type="text" value="{{actor.data.faction}}" placeholder="Faction" />
             </div>
         </div>
         <img class=".sheet-header-item profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" height="100" width="100" />
-        <div class=".sheet-header-item">Niveaux de blessures</div>
+        <div class=".sheet-header-item">
+            Niveaux de blessures
+            <ul class="injuries-list">
+                {{#each actor.data.injuries as |injury key|}}
+                <li class="skill">
+                    <div class="skill-name-controls">
+                        <label class="skill-name rollable">{{key}}</label>
+                        <input name="data.injuries.{{key}}" type="checkbox" {{checked injury}} />
+                    </div>
+                </li>
+                {{/each}}
+            </ul>
+        </div>
+        
     </header>
 
     {{!-- Sheet Tab Navigation --}}
     <nav class="sheet-tabs tabs" data-group="primary">
-        <a class="item" data-tab="attributes">Attributes</a>
+        <a class="item" data-tab="attributes">Caractéristiques</a>
+        <a class="item" data-tab="competence">Compétences</a>
+        <a class="item" data-tab="talent">Talents</a>
     </nav>
 
     {{!-- Sheet Body --}}
@@ -61,8 +76,17 @@
 
         {{!-- Attributes Tab --}}
         <div class="tab attributes" data-group="primary" data-tab="attributes">
-            {{!-- Render the attribute list partial. --}}
             {{> "systems/cats/templates/parts/sheet-attributes.html"}}
+        </div>
+
+        {{!-- Competence Tab --}}
+        <div class="tab competence" data-group="primary" data-tab="competence">
+            {{> "systems/cats/templates/parts/sheet-competence.html"}}
+        </div>
+
+        {{!-- Talent Tab --}}
+        <div class="tab talent" data-group="primary" data-tab="talent">
+            {{> "systems/cats/templates/parts/sheet-talent.html"}}
         </div>
     </section>
 </form>
