Add basic type management

--- a/templates/actor-sheet.html
+++ b/templates/actor-sheet.html
@@ -4,7 +4,7 @@
     <header class="sheet-header">
         <div class=".sheet-header-item">
             <h1 class="charname">
-                <input name="" type="text" value="Chat" placeholder="Type" />
+                <input name="" type="text" value="{{actor.name}}" placeholder="Type" disabled/>
             </h1>
         </div>
         <div class=".sheet-header-item">
