--- a/templates/actor-sheet.html
+++ b/templates/actor-sheet.html
@@ -58,13 +58,10 @@
             </ul>
 
         </section>
-
-
-
     </header>
 
     {{!-- Sheet Tab Navigation --}}
-    <nav class="sheet-tabs tabs" data-group="primary">
+    <nav class="sheet-navigation tabs" data-group="primary">
         <a class="item" data-tab="attributes">Caractéristiques</a>
         <a class="item" data-tab="competence">Compétences</a>
         <a class="item" data-tab="talent">Talents</a>
