--- a/styles/apps.less
+++ b/styles/apps.less
@@ -660,3 +660,15 @@
     overflow-y: auto;
   }
 }
+
+
+
+.col-2 {
+  flex: 0 0 16.66666667%;
+  max-width: 16.66666667%;
+}
+
+.col-4 {
+  flex: 0 0 33.33333333%;
+  max-width: 33.33333333%;
+}
