--- a/templates/parts/sheet-talent.html
+++ b/templates/parts/sheet-talent.html
@@ -1,4 +1,13 @@
-<ol class="item-list">
+<ol class="items-list inventory-list">
+    <li class="items-header flexrow">
+        <h3 class="item-name flexrow"> Talent </h3>
+
+        <div class="item-controls flexrow">
+            <a class="item-control item-create" title="{{localize 'DND5E.FeatureAdd'}}" {{#each section.dataset as |v k|}}data-{{k}}="{{v}}"{{/each}}>
+                <i class="fas fa-plus"></i> {{localize "DND5E.Add"}}
+            </a>
+        </div>
+    </li>
     {{#each talents as |item id|}}
     <li class="item flexrow" data-item-id="{{item._id}}">
         <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
