--- a/templates/parts/sheet-talent.html
+++ b/templates/parts/sheet-talent.html
@@ -3,56 +3,38 @@
         <h3 class="item-name flexrow"> Talent </h3>
 
         <div class="item-controls flexrow">
-            <a class="item-control item-create" title="{{localize 'DND5E.FeatureAdd'}}" {{#each section.dataset as |v k|}}data-{{k}}="{{v}}"{{/each}}>
-                <i class="fas fa-plus"></i> {{localize "DND5E.Add"}}
+            <a class="item-control item-create" title="{{localize 'SIMPLE.Add'}}" data-action="create">
+                <i class="fas fa-plus"></i>
             </a>
         </div>
     </li>
     {{#each talents as |item id|}}
     <li class="item flexrow" data-item-id="{{item._id}}">
-        <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
-        <h4 class="item-name">{{item.name}}</h4>
-        {{!-- Iterate through all attributes on the item and output buttons for any that are formula. --}}
-        <div class="item-buttons">
-            {{#each item.data.attributes as |itemAttr key|}}
-            {{#if itemAttr.dtype}}
-                {{#if itemAttr.isFormula}}
-                    {{!-- Use the items.name.key format for shorthand. --}}
-                    {{#if ../../shorthand}}
-                    <button class="item-button rollable" data-roll="@items.{{slugify item.name}}.{{key}}" data-label="{{ itemAttr.label }}"
-                        title="{{itemAttr.value}}">{{itemAttr.label}}</button>
-                    {{!-- Use the items.name.attributes.key.value format otherwise. --}}
-                    {{else}}
-                    <button class="item-button rollable"
-                        data-roll="@items.{{slugify item.name}}.attributes.{{key}}.value" data-label="{{ itemAttr.label }}"
-                        title="{{itemAttr.value}}">{{itemAttr.label}}</button>
-                    {{/if}}
-                {{/if}}
-            {{else}}
-                {{#each itemAttr as |itemGroupedAttr groupedKey|}}
-                    {{#if itemGroupedAttr.isFormula}}
-                        {{!-- Use the items.name.key format for shorthand. --}}
-                        {{#if ../../../shorthand}}
-                        <button class="item-button rollable" data-roll="@items.{{slugify item.name}}.{{key}}.{{groupedKey}}" data-label="{{ itemGroupedAttr.label }}"
-                            title="{{itemGroupedAttr.value}}">{{itemGroupedAttr.label}}</button>
-                        {{!-- Use the items.name.attributes.key.value format otherwise. --}}
-                        {{else}}
-                        <button class="item-button rollable"
-                            data-roll="@items.{{slugify item.name}}.attributes.{{key}}.{{groupedKey}}.value" data-label="{{ itemGroupedAttr.label }}"
-                            title="{{itemGroupedAttr.value}}">{{itemGroupedAttr.label}}</button>
-                        {{/if}}
-                    {{/if}}
+        <div class="item-name flexrow rollable">
+            <div class="item-image" tabindex="0" role="button" aria-label="{{item.name}}"
+                style="background-image: url('{{item.img}}')"></div>
+            <h4 class="item-name">{{item.name}}</h4>
+        </div>
+
+
+        <div class="item-detail item-action">
+            <select name="item.data.level" class="level-selector">
+                {{#select item.data.level}}
+                {{#each item.data.availableLevels as |level| }}
+                <option value="{{level}}" {{disabled this.disabled}}>
+                    {{level}}
+                    {{#if item.data.delta}}({{numberFormat item.data.delta.delta sign=true}}){{/if}}
+                </option>
                 {{/each}}
-            {{/if}}
-            {{/each}}
+                {{/select}}
+            </select>
         </div>
         <div class="item-controls">
-            <a class="item-control" title="{{ localize "SIMPLE.ItemEdit" }}" data-action="edit"><i class="fas fa-edit"></i></a>
-            <a class="item-control" title="{{ localize "SIMPLE.ItemDelete" }}" data-action="delete"><i class="fas fa-trash"></i></a>
+            <a class="item-control" title="{{ localize " SIMPLE.ItemEdit" }}" data-action="edit"><i
+                    class="fas fa-edit"></i></a>
+            <a class="item-control" title="{{ localize " SIMPLE.ItemDelete" }}" data-action="delete"><i
+                    class="fas fa-trash"></i></a>
         </div>
     </li>
     {{/each}}
 </ol>
-<p>
-    <a class="item-control" title="{{ localize "SIMPLE.ItemCreate" }}" data-action="create"><i class="fas fa-plus"></i> {{ localize "SIMPLE.ItemCreate" }}</a>
-</p>
