Test update base skills

--- a/templates/parts/sheet-attributes.html
+++ b/templates/parts/sheet-attributes.html
@@ -16,25 +16,25 @@
         <div class="col-2"></div>
         <div class="col-4 ability">
             <h4 class="ability-name rollable">{{localize actor.data.abilities.poil.label}}</h4>
-            <input class="ability-score" name="data.abilities.poil.value" id="data.abilities.poil" type="number"
+            <input class="ability-score" name="poil" id="data.abilities.poil" type="number"
                     value="{{ actor.data.abilities.poil.value }}" />
         </div>
         <div class="col-4 ability" >
             <h4 class="ability-name rollable">{{localize actor.data.abilities.oeil.label}}</h4>
-            <input class="ability-score" name="data.abilities.oeil.value" id="data.abilities.oeil" type="number"
+            <input class="ability-score" name="oeil" id="data.abilities.oeil" type="number"
                     value="{{ actor.data.abilities.oeil.value }}" />
         </div>
         <div class="col-2"></div>
 
         <div class="col-4 ability">            
             <h4 class="ability-name rollable">{{localize actor.data.abilities.griffe.label}}</h4>
-            <input class="ability-score" name="data.abilities.griffe.value" id="data.abilities.griffe" type="number"
+            <input class="ability-score" name="griffe" id="data.abilities.griffe" type="number"
                     value="{{ actor.data.abilities.griffe.value }}" />
         </div>
         <div class="col-4"></div>
         <div class="col-4 ability">
             <h4 class="ability-name rollable">{{localize actor.data.abilities.queue.label}}</h4>
-            <input class="ability-score" name="data.abilities.queue.value" id="data.abilities.queue" type="number"
+            <input class="ability-score" name="queue" id="data.abilities.queue" type="number"
                     value="{{ actor.data.abilities.queue.value }}" />
         </div>
     </div>
@@ -42,25 +42,25 @@
         <div class="col-2"></div>
         <div class="col-4 ability">
             <h4 class="ability-name rollable">{{localize actor.data.abilities.ronronnement.label}}</h4>
-            <input class="ability-score" name="data.abilities.ronronnement.value" id="data.abilities.ronronnement" type="number"
+            <input class="ability-score" name="ronronnement" id="data.abilities.ronronnement" type="number"
                     value="{{ actor.data.abilities.ronronnement.value }}" />
         </div>
         <div class="col-4 ability">
             <h4 class="ability-name rollable">{{localize actor.data.abilities.cousinet.label}}</h4>
-            <input class="ability-score" name="data.abilities.cousinet.value" id="data.abilities.cousinet" type="number"
+            <input class="ability-score" name="cousinet" id="data.abilities.cousinet" type="number"
                     value="{{ actor.data.abilities.cousinet.value }}" />
         </div>
         <div class="col-2"></div>
 
         <div class="col-4 ability">            
             <h4 class="ability-name rollable">{{localize actor.data.abilities.caresse.label}}</h4>
-            <input class="ability-score" name="data.abilities.caresse.value" id="data.abilities.caresse" type="number"
+            <input class="ability-score" name="caresse" id="data.abilities.caresse" type="number"
                     value="{{ actor.data.abilities.caresse.value }}" />
         </div>
         <div class="col-4"></div>
         <div class="col-4 ability">
             <h4 class="ability-name rollable">{{localize actor.data.abilities.vibrisse.label}}</h4>
-            <input class="ability-score" name="data.abilities.vibrisse.value" id="data.abilities.vibrisse" type="number"
+            <input class="ability-score" name="vibrisse" id="data.abilities.vibrisse" type="number"
                     value="{{ actor.data.abilities.vibrisse.value }}" />
         </div>
     </div>
@@ -68,6 +68,6 @@
 
 <div class="chance">
     <label>{{localize actor.data.abilities.chance.label }}</label>
-    <input name="data.abilities.chance.value" type="number" value="{{ actor.data.abilities.chance.value }}"
+    <input name="chance" type="number" value="{{ actor.data.abilities.chance.value }}"
         placeholder="{{localize actor.data.abilities.chance.label }}" />
 </div>
