--- a/templates/items/item.html
+++ b/templates/items/item.html
@@ -29,7 +29,7 @@
             type="text"
             name="data.source"
             value="{{data.source}}"
-            placeholder="{{ localize 'Cats.Source' }}"
+            placeholder="{{ localize 'DND5E.Source' }}"
           />
         </li>
       </ul>
