--- a/templates/parts/sheet-attributes.html
+++ b/templates/parts/sheet-attributes.html
@@ -1,73 +1,178 @@
 <div>
-    <label>NEUF VIES</label>
-    <input type="checkbox" name="data.life.one" {{checked actor.data.life.one}}>
-    <input type="checkbox" name="data.life.two" {{checked actor.data.life.two}}>
-    <input type="checkbox" name="data.life.three" {{checked actor.data.life.three}}>
-    <input type="checkbox" name="data.life.four" {{checked actor.data.life.four}}>
-    <input type="checkbox" name="data.life.five" {{checked actor.data.life.five}}>
-    <input type="checkbox" name="data.life.six" {{checked actor.data.life.six}}>
-    <input type="checkbox" name="data.life.seven" {{checked actor.data.life.seven}}>
-    <input type="checkbox" name="data.life.eight" {{checked actor.data.life.eight}}>
-    <input type="checkbox" name="data.life.nine" {{checked actor.data.life.nine}}>
+  <label>NEUF VIES</label>
+  <input
+    type="checkbox"
+    name="data.life.one"
+    {{checked
+    actor.system.life.one}}
+  />
+  <input
+    type="checkbox"
+    name="data.life.two"
+    {{checked
+    actor.system.life.two}}
+  />
+  <input
+    type="checkbox"
+    name="data.life.three"
+    {{checked
+    actor.system.life.three}}
+  />
+  <input
+    type="checkbox"
+    name="data.life.four"
+    {{checked
+    actor.system.life.four}}
+  />
+  <input
+    type="checkbox"
+    name="data.life.five"
+    {{checked
+    actor.system.life.five}}
+  />
+  <input
+    type="checkbox"
+    name="data.life.six"
+    {{checked
+    actor.system.life.six}}
+  />
+  <input
+    type="checkbox"
+    name="data.life.seven"
+    {{checked
+    actor.system.life.seven}}
+  />
+  <input
+    type="checkbox"
+    name="data.life.eight"
+    {{checked
+    actor.system.life.eight}}
+  />
+  <input
+    type="checkbox"
+    name="data.life.nine"
+    {{checked
+    actor.system.life.nine}}
+  />
 </div>
 <h2>Caractéristiques</h2>
 <div class="flexrow">
-    <div class="ability-scores flexrow">
-        <div class="col-2"></div>
-        <div class="col-4 ability">
-            <h4 class="ability-name rollable">{{localize actor.data.abilities.poil.label}}</h4>
-            <input class="ability-score" name="data.abilities.poil.value" id="data.abilities.poil" type="number"
-                    value="{{ actor.data.abilities.poil.value }}" />
-        </div>
-        <div class="col-4 ability" >
-            <h4 class="ability-name rollable">{{localize actor.data.abilities.oeil.label}}</h4>
-            <input class="ability-score" name="data.abilities.oeil.value" id="data.abilities.oeil" type="number"
-                    value="{{ actor.data.abilities.oeil.value }}" />
-        </div>
-        <div class="col-2"></div>
-
-        <div class="col-4 ability">            
-            <h4 class="ability-name rollable">{{localize actor.data.abilities.griffe.label}}</h4>
-            <input class="ability-score" name="data.abilities.griffe.value" id="data.abilities.griffe" type="number"
-                    value="{{ actor.data.abilities.griffe.value }}" />
-        </div>
-        <div class="col-4"></div>
-        <div class="col-4 ability">
-            <h4 class="ability-name rollable">{{localize actor.data.abilities.queue.label}}</h4>
-            <input class="ability-score" name="data.abilities.queue.value" id="data.abilities.queue" type="number"
-                    value="{{ actor.data.abilities.queue.value }}" />
-        </div>
+  <div class="ability-scores flexrow">
+    <div class="col-2"></div>
+    <div class="col-4 ability">
+      <h4 class="ability-name rollable">
+        {{localize actor.system.abilities.poil.label}}
+      </h4>
+      <input
+        class="ability-score"
+        name="system.abilities.poil.value"
+        id="system.abilities.poil"
+        type="number"
+        value="{{ actor.system.abilities.poil.value }}"
+      />
     </div>
-    <div class="ability-scores flexrow">
-        <div class="col-2"></div>
-        <div class="col-4 ability">
-            <h4 class="ability-name rollable">{{localize actor.data.abilities.ronronnement.label}}</h4>
-            <input class="ability-score" name="data.abilities.ronronnement.value" id="data.abilities.ronronnement" type="number"
-                    value="{{ actor.data.abilities.ronronnement.value }}" />
-        </div>
-        <div class="col-4 ability">
-            <h4 class="ability-name rollable">{{localize actor.data.abilities.cousinet.label}}</h4>
-            <input class="ability-score" name="data.abilities.cousinet.value" id="data.abilities.cousinet" type="number"
-                    value="{{ actor.data.abilities.cousinet.value }}" />
-        </div>
-        <div class="col-2"></div>
-
-        <div class="col-4 ability">            
-            <h4 class="ability-name rollable">{{localize actor.data.abilities.caresse.label}}</h4>
-            <input class="ability-score" name="data.abilities.caresse.value" id="data.abilities.caresse" type="number"
-                    value="{{ actor.data.abilities.caresse.value }}" />
-        </div>
-        <div class="col-4"></div>
-        <div class="col-4 ability">
-            <h4 class="ability-name rollable">{{localize actor.data.abilities.vibrisse.label}}</h4>
-            <input class="ability-score" name="data.abilities.vibrisse.value" id="data.abilities.vibrisse" type="number"
-                    value="{{ actor.data.abilities.vibrisse.value }}" />
-        </div>
+    <div class="col-4 ability">
+      <h4 class="ability-name rollable">
+        {{localize actor.system.abilities.oeil.label}}
+      </h4>
+      <input
+        class="ability-score"
+        name="system.abilities.oeil.value"
+        id="system.abilities.oeil"
+        type="number"
+        value="{{ actor.system.abilities.oeil.value }}"
+      />
     </div>
+    <div class="col-2"></div>
+
+    <div class="col-4 ability">
+      <h4 class="ability-name rollable">
+        {{localize actor.system.abilities.griffe.label}}
+      </h4>
+      <input
+        class="ability-score"
+        name="system.abilities.griffe.value"
+        id="system.abilities.griffe"
+        type="number"
+        value="{{ actor.system.abilities.griffe.value }}"
+      />
+    </div>
+    <div class="col-4"></div>
+    <div class="col-4 ability">
+      <h4 class="ability-name rollable">
+        {{localize actor.system.abilities.queue.label}}
+      </h4>
+      <input
+        class="ability-score"
+        name="system.abilities.queue.value"
+        id="system.abilities.queue"
+        type="number"
+        value="{{ actor.system.abilities.queue.value }}"
+      />
+    </div>
+  </div>
+  <div class="ability-scores flexrow">
+    <div class="col-2"></div>
+    <div class="col-4 ability">
+      <h4 class="ability-name rollable">
+        {{localize actor.system.abilities.ronronnement.label}}
+      </h4>
+      <input
+        class="ability-score"
+        name="system.abilities.ronronnement.value"
+        id="system.abilities.ronronnement"
+        type="number"
+        value="{{ actor.system.abilities.ronronnement.value }}"
+      />
+    </div>
+    <div class="col-4 ability">
+      <h4 class="ability-name rollable">
+        {{localize actor.system.abilities.cousinet.label}}
+      </h4>
+      <input
+        class="ability-score"
+        name="system.abilities.cousinet.value"
+        id="system.abilities.cousinet"
+        type="number"
+        value="{{ actor.system.abilities.cousinet.value }}"
+      />
+    </div>
+    <div class="col-2"></div>
+
+    <div class="col-4 ability">
+      <h4 class="ability-name rollable">
+        {{localize actor.system.abilities.caresse.label}}
+      </h4>
+      <input
+        class="ability-score"
+        name="system.abilities.caresse.value"
+        id="system.abilities.caresse"
+        type="number"
+        value="{{ actor.system.abilities.caresse.value }}"
+      />
+    </div>
+    <div class="col-4"></div>
+    <div class="col-4 ability">
+      <h4 class="ability-name rollable">
+        {{localize actor.system.abilities.vibrisse.label}}
+      </h4>
+      <input
+        class="ability-score"
+        name="system.abilities.vibrisse.value"
+        id="system.abilities.vibrisse"
+        type="number"
+        value="{{ actor.system.abilities.vibrisse.value }}"
+      />
+    </div>
+  </div>
 </div>
 
 <div class="chance">
-    <label>{{localize actor.data.abilities.chance.label }}</label>
-    <input name="data.abilities.chance.value" type="number" value="{{ actor.data.abilities.chance.value }}"
-        placeholder="{{localize actor.data.abilities.chance.label }}" />
+  <label>{{localize actor.system.abilities.chance.label }}</label>
+  <input
+    name="system.abilities.chance.value"
+    type="number"
+    value="{{ actor.system.abilities.chance.value }}"
+    placeholder="{{localize actor.system.abilities.chance.label }}"
+  />
 </div>
