--- a/templates/parts/sheet-competence.html
+++ b/templates/parts/sheet-competence.html
@@ -1,12 +1,19 @@
 {{!-- Skills --}}
 <ul class="skills-list">
-    {{#each actor.data.skills as |skill key|}}
-    <li class="skill flexrow">
-
-            <label class="skill-name rollable">{{localize skill.label}}</label>
-            <input name="data.skills.{{key}}.baseValue" type="number" value="{{skill.baseValue}}" disabled/>
-            <input name="data.skills.{{key}}.learnValue" type="number" value="{{skill.learnValue}}" />
-
-    </li>
-    {{/each}}
+  {{#each actor.system.skills as |skill key|}}
+  <li class="skill flexrow">
+    <label class="skill-name rollable">{{localize skill.label}}</label>
+    <input
+      name="system.skills.{{key}}.baseValue"
+      type="number"
+      value="{{skill.baseValue}}"
+      disabled
+    />
+    <input
+      name="system.skills.{{key}}.learnValue"
+      type="number"
+      value="{{skill.learnValue}}"
+    />
+  </li>
+  {{/each}}
 </ul>
